[gd_scene load_steps=13 format=3 uid="uid://dk6c12qs5g6g3"]

[ext_resource type="Script" path="res://Items/Upgrades/DizzyTurtle/choice.gd" id="1_s0b8u"]
[ext_resource type="Texture2D" uid="uid://b6m5amcx22cae" path="res://Characters/Poochys/Poochy-Stander.png" id="2_s73ne"]
[ext_resource type="Texture2D" uid="uid://b2plvhpikqu56" path="res://Characters/Poochys/Poochy-Walker-Sheet.png" id="3_7gm41"]
[ext_resource type="PackedScene" uid="uid://bgpq7txp7u0ol" path="res://Items/Upgrades/DizzyTurtle/power.tscn" id="4_av78m"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_3mvwi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bv05w"]
atlas = ExtResource("3_7gm41")
region = Rect2(0, 0, 17, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_mli87"]
atlas = ExtResource("3_7gm41")
region = Rect2(17, 0, 17, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejdo0"]
atlas = ExtResource("3_7gm41")
region = Rect2(34, 0, 17, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0gdg"]
atlas = ExtResource("3_7gm41")
region = Rect2(51, 0, 17, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq7r8"]
atlas = ExtResource("3_7gm41")
region = Rect2(68, 0, 17, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_1t77e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_s73ne")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv05w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mli87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejdo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0gdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq7r8")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hh40e"]
properties/0/path = NodePath(".:picker")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:remote_animation")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath(".:updated_animation")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath("Description:text")
properties/3/spawn = true
properties/3/sync = true
properties/4/path = NodePath("Title:text")
properties/4/spawn = true
properties/4/sync = true
properties/5/path = NodePath(".:card_id")
properties/5/spawn = true
properties/5/sync = true

[node name="DizzyTurtle" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_s0b8u")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(500, 888)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
expand_icon = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Button"]
modulate = Color(1, 0, 1, 1)
material = SubResource("CanvasItemMaterial_3mvwi")
position = Vector2(204.301, 462.878)
rotation = -2.07869
scale = Vector2(10.3389, 25.2745)
sprite_frames = SubResource("SpriteFrames_1t77e")
animation = &"hover"

[node name="Networking" type="Node" parent="."]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Networking"]
root_path = NodePath("../..")
replication_config = SubResource("SceneReplicationConfig_hh40e")

[node name="Description" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 488.0
offset_right = 489.0
offset_bottom = 876.0
theme_override_font_sizes/font_size = 52
text = "Spin around to gain a shield!"
autowrap_mode = 3

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 11.0
offset_right = 489.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 52
text = "Dizzy Turtle"
horizontal_alignment = 1

[node name="DizzyTurtle" parent="." instance=ExtResource("4_av78m")]

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
